--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Illustration Portfolio # the website title (if blank, full name will be used instead)
+title: Pedro Ferreira # the website title (if blank, full name will be used instead)
 first_name: Pedro
 middle_name: AC
 last_name: Ferreira
